--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -194,7 +194,7 @@ Sekitar waktu "Last Resort" menjadi populer, pada pertengahan tahun 2019, Ayase 
                                 <a class="nav-link" href="/">
                                   <i class="fa-solid fa-house" style="color: white;"></i>
                                 </a>
-                                <a class="nav-link" href="/">
+                                <a class="nav-link" href="/album">
                                   <i class="fa-solid fa-book" style="color: white;"></i>
                                 </a>                                                         
                                 <a class="nav-link" href="/">
