--- a/views/bio.ejs
+++ b/views/bio.ejs
@@ -59,7 +59,7 @@ Setelah viral di media sosial, singel debut Yoasobi tahun 2019, "Yoru ni Kakeru"
               <div class="bio_foto">
                 <div class="berwarna container_text"><h1>Yoasobi</h1></div>
                 <div class="foto">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/yoasobibio.png" alt="">
                 </div>
               </div>
               <div class="bio_latarblkg">
@@ -107,9 +107,9 @@ Pada tanggal 4 Februari 2018, Lilas tampil di acara musik televisi TV Asahi sepe
           <div class="container_right_parent">
             <div class="right_parent">
               <div class="bio_foto">
-                <div class="berwarna container_text"><h1>Yoasobi</h1></div>
+                <div class="berwarna container_text"><h1>Lilas Ikuta</h1></div>
                 <div class="foto">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/ikurabio.png" alt="">
                 </div>
               </div>
               <div class="bio_latarblkg">
@@ -120,7 +120,7 @@ Pada tanggal 4 Februari 2018, Lilas tampil di acara musik televisi TV Asahi sepe
                   <ul>
                     <li>Kelahiran</li>
                     <li>Nama lain</li>
-                    <li>Aktif</li>
+                    <li>Asal</li>
                     <li>Tahun Aktif</li>
                     <li>Pekerjaan</li>
                   </ul>
@@ -154,9 +154,9 @@ Sekitar waktu "Last Resort" menjadi populer, pada pertengahan tahun 2019, Ayase 
           <div class="container_right_parent">
             <div class="right_parent">
               <div class="bio_foto">
-                <div class="berwarna container_text"><h1>Yoasobi</h1></div>
+                <div class="berwarna container_text"><h1>Ayase</h1></div>
                 <div class="foto">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/ayasebio.png" alt="">
                 </div>
               </div>
               <div class="bio_latarblkg">
